Add build project before build container

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,5 +14,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: build .jar
+      run: ./gradlew build
     - name: Build the Docker image
       run: docker build . --file Dockerfile
