--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,9 +2,12 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "docker" , "main" ]
   pull_request:
     branches: [ "main" ]
+
+permissions:
+  contents: read
 
 jobs:
 
@@ -14,5 +17,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+    - name: Change wrapper permissions
+      run: chmod +x ./gradlew
+    - name: build .jar
+      run: ./gradlew build
     - name: Build the Docker image
       run: docker build . --file Dockerfile
